# nastools

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/f06magic/: simple.toml
examples/mystran/: EB-ALL-ELEM-TEST-GIV.F06  SB-ALL-ELEM-TEST.F06  SB-BUSH-01-OFFSET-2b.F06
examples/scnastran/: ES-ALL-ELEM-TEST-GIV.f06  SB-ALL-ELEM-TEST_scnas_postexport.f06  SB-BUSH-01-OFFSET-2b_scnas_postexport.f06
f06/: Cargo.toml
f06/src/: blocks.rs  elements.rs  f06file.rs  fields.rs  flavour.rs  geometry.rs  lib.rs  parser.rs  tests.rs  util.rs
f06/src/blocks/: compare.rs  decoders.rs  indexing.rs  known.rs  types.rs
f06/src/f06file/: diff.rs  extraction.rs
f06/src/fields/: indexing.rs
f06csv/: Cargo.toml  MANUAL.md
f06csv/src/: main.rs
f06diff/: Cargo.toml
f06diff/src/: main.rs
f06dump/: Cargo.toml
f06dump/src/: main.rs
f06info/: Cargo.toml
f06info/src/: main.rs
f06magic/: Cargo.toml
f06magic/src/: main.rs  utils.rs
f06magic/src/script/: comparison.rs  criteria.rs  errors.rs  extraction.rs  mod.rs
nas_csv/: Cargo.toml
nas_csv/src/: formatting.rs  from_f06.rs  layout.rs  lib.rs
nas_csv/src/from_f06/: index_fns.rs  templates.rs
nastester/: Cargo.toml
nastester/src/: app.rs  gui.rs  main.rs  results.rs  running.rs  suite.rs
