[package]
name = "f06"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
version = "0.3.1"
edition = "2021"

[dependencies]
csv = "1.3"
derive_more = "0.99"
log = "0.4.20"
itertools = "0.12"
convert_case = "0.6"
num = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }

[dependencies.nalgebra]
version = "0.32.3"
features = ["serde", "serde-serialize", "sparse"]
