[package]
name = "f06csv"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
csv = "1.3"
derive_more = "0.99"

[dependencies.f06]
version = "0.2"
path = "../f06"

[dependencies.nas_csv]
version = "0.2"
path = "../nas_csv"
