[package]
name = "f06magic"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
num = "0.4"

[dependencies.f06]
version = "0.5"
path = "../f06"
