[package]
name = "nas_csv"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
convert_case = "0.6"
derive_more = "0.99"


[dependencies.f06]
version = "0.1"
path = "../f06"
