[package]
name = "nas_csv"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
version = "0.3.5"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
convert_case = "0.6"
derive_more = "0.99"

[dependencies.f06]
version = "0.3"
path = "../f06"
