[package]
name = "nastester"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rayon = "1.10"
tempdir = "0.3"
derive_more = "0.99"
subprocess = "0.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["serde"] }

[dependencies.f06]
version = "0.3"
path = "../f06"
