[package]
name = "nastester"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
version = "0.2.0"
edition = "2021"

[dependencies]
derive_more = "0.99"
egui_extras = "0.27"
env_logger = "0.10"
log = "0.4"
native-dialog = "0.7"
rayon = "1.10"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2"
tempfile = "3.10"
uuid = { version = "1.8", features = ["serde", "v4"] }
num_cpus = "1.16"

[dependencies.f06]
version = "0.5"
path = "../f06"

[dependencies.nas_csv]
version = "0.5"
path = "../nas_csv"

[dependencies.egui]
version = "0.27"
features = ["log", "mint", "persistence", "rayon", "serde"]

[dependencies.eframe]
version = "0.27"
features = ["persistence"]
